--- a/.gitignore
+++ b/.gitignore
@@ -3803,3 +3803,4 @@ VRGame_WorkingTitle/Library/PackageCache/com.unity.test-framework@1.0.13/UnityEn
 VRGame_WorkingTitle/Library/PackageCache/com.unity.test-framework@1.0.13/UnityEngine.TestRunner/Utils/Vector4EqualityComparer.cs.meta
 VRGame_WorkingTitle/Library/PackageCache/com.unity.textmeshpro@2.0.1/Scripts/Runtime/TMP_FontAsset.cs
 VRGame_WorkingTitle/Library/shadercompiler-UnityShaderCompiler.exe0.log
+VRGame_WorkingTitle/Library/SceneVisibilityState.asset
